azure/kubernetes/kong/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    app.kubernetes.io/name: kong
    app.kubernetes.io/managed-by: argocd
