azure/kubernetes/kong/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  template:
    spec:
      containers:
      - name: proxy
        volumeMounts:
        - name: ca-certs
          mountPath: /etc/ssl/certs
          readOnly: true
      - name: ingress-controller
        volumeMounts:
        - name: ca-certs
          mountPath: /etc/ssl/certs
          readOnly: true
      volumes:
      - name: ca-certs
        configMap:
          name: azure-ca-certs
