azure/kubernetes/kong/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin
  namespace: kong
  labels:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: admin
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-admin
                port:
                  number: 8001
  tls:
    - hosts:
        - kong-admin
