azure/kubernetes/kong/ingress-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-manager
  namespace: kong
  labels:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: manager
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-manager
                port:
                  number: 8002
  tls:
    - hosts:
        - kong-manager
